<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="35dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="5dp" >

        <Button
            android:id="@+id/btn_nhapmoi"
            style="@style/btnStylelemon_chiffon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:height="70dp"
            android:onClick="call_detaiview_input"
            android:text="@string/btn_nhapmoiseri"
            android:textSize="25dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_tracuu"
        style="@style/btnStylelemon_chiffon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="70dp"
        android:onClick="call_seach_seri"
        android:text="@string/btn_tracuuseri"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="5dp" >

        <Button
            android:id="@+id/btn_call_loopupseri"
            style="@style/btnStylelemon_chiffon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="70dp"
            android:onClick="call_loopup_seri"
            android:paddingTop="4dp"
            android:text="@string/btn_tracuuthongtin"
            android:textSize="25sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_thoatmenu"
        style="@style/btnStylelemon_chiffon"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="17dp"
        android:layout_marginTop="14dp"
        android:onClick="thoat"
        android:text="@string/btn_thoatmenu"
        android:textSize="25sp" />

</LinearLayout>
