<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/e_seri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Số ấn chỉ"
        android:maxLength="8"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/e_bks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="BKS(SK)"
        android:inputType="textCapCharacters"
        android:digits="0,1,2,3,4,5,6,7,8,9,-ABCDEFGHIJKLMNOPQRSTVUWXYZ"
        />

    <CheckBox
        android:id="@+id/c1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lhbh_0" />

    <CheckBox
        android:id="@+id/c2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lhbh_1" />

    <CheckBox
        android:id="@+id/c3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lhbh_2" />

    <CheckBox
        android:id="@+id/c4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lhbh_3" />

    <CheckBox
        android:id="@+id/c5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lhbh_4" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tình trạng phí:"
            android:textColor="#ca7c3c"
            android:textSize="18sp" />
        <Spinner
            android:id="@+id/typeUnitSpinnerEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bt_back"
            style="@style/btnStylelemon_chiffon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.31"
            android:onClick="thoat"
            android:text="Quay lại" />

        <Button
            android:id="@+id/bt_edit"
            style="@style/btnStylelemon_chiffon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.56"
            android:text="Sửa" />

        <Button
            android:id="@+id/bt_save"
            style="@style/btnStylelemon_chiffon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.52"
            android:text="Lưu" />

    </LinearLayout>

</LinearLayout>