<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvbks_list_offline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_span="2"
            android:text="Nhập thông tin tạo hồ sơ"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lisencePlateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BKS/SK"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtbks_create_offline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
             android:digits="0123456789-ABCDEFGHIJKLMNOPQRSTVUWXYZabcdefghijklmnopqrstuvwxyz"
            android:inputType="textCapCharacters"
            android:hint="@string/Hint_create_offline_bks" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/optionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Số ấn chỉ/serial"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtso_seri_create_offline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"           
            android:hint="@string/Hint_create_offline_seri" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnsave_offline"
            android:layout_width="wrap_content"
            android:layout_span="2"
            android:text="@string/btn_save_offline"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </TableRow>

</TableLayout>